# parallax

./: README.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial_schema.py  0002_trigger_display_name.py  0003_professor_capacity_fields.py  0004_email_intake.py  0005_timezone_aware_timestamps.py  0006_publication_status.py  0007_embedding_dims_1024.py  0008_chunks_fk_cascade.py  0009_professor_custom_instructions.py  0010_outreach_delete_cascade.py  0011_professor_institution.py  0012_outreach_triage_reason.py  0013_outreach_provider_message_id.py  0014_created_updated_at.py
backend/scripts/: retry_tts.py
backend/src/: config.py
backend/src/adapters/auth/: supabase_auth.py
backend/src/adapters/email/: brevo_sender.py  confirmation.py  intake.py  (+1 more)
backend/src/shared/: logging.py
backend/tests/: conftest.py  test_ingestion.py  test_negotiation_engine.py
backend/tests/adapters/: test_capacity_math.py  test_chat_model.py  test_claim_verification.py  test_langgraph_engine.py  test_mcp_server.py  test_mobility_lookup.py  test_personas.py  test_publication_retriever.py  test_qwen_compliance.py  test_reranker.py  test_skills_loader.py  test_tool_registry.py  test_tts.py
backend/tests/api/: test_health.py  test_publication_upload.py
backend/tests/application/: test_process_inbound_email.py  test_run_debate.py  test_synthesize_debate_audio.py  test_triage_outreach.py
backend/tests/benchmark/: baseline_agent.py  cases.py  deep_dive_one_case.py  pricing.py  run_benchmark.py  run_fair_comparison.sh  test_benchmark.py
(+141 files in other folders)
