[project]
name = "parallax-backend"
version = "0.1.0"
description = "Agent society for faculty outreach triage — Parallax"
authors = [{ name = "olamideba", email = "olamidebalogun174@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlmodel>=0.0.21",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "loguru>=0.7.3",
    "httpx>=0.28.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.20",
    "pymupdf>=1.24.0",
    "aioboto3>=13.0.0",
    "uuid6>=2024.1.12",
    "email-validator>=2.2.0",
    "mcp>=1.0.0",
    "PyJWT[crypto]>=2.9.0",
    "langgraph>=1.2.7",
    "langchain>=1.3.11",
    "langchain-qwq>=0.3.5",
    "langchain-core>=1.4.8",
    "dashscope>=1.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring live external services",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
